--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = example.example.settings
 python_files = test_*.py *_test.py tests.py
+addopts = -q
 pythonpath =
     .
