chore: restructure examples project and pytest config

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = example.example.settings
+DJANGO_SETTINGS_MODULE = examples.config.settings
 python_files = test_*.py *_test.py tests.py
 addopts = -q
-pythonpath =
-    .
+pythonpath = . examples
