--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 DJANGO_SETTINGS_MODULE = examples.config.settings
 python_files = test_*.py *_test.py tests.py
 addopts = -q
-pythonpath = . examples
+testpaths = tests
+pythonpath = .
