--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "django-xbench"
-version = "0.1.0"
+version = "0.1.1"
 description = "Django middleware that measures request time breakdown (total/db/app) and query count using execute_wrapper."
 readme = "README.md"
 requires-python = ">=3.9"
@@ -14,8 +14,17 @@ authors = [{ name = "Kim Yeongbin" }]
 keywords = ["django", "performance", "profiling", "instrumentation"]
 classifiers = [
   "Framework :: Django",
+  "Framework :: Django :: 3.2",  
+  "Framework :: Django :: 4.2",
+  "Framework :: Django :: 5.0",
   "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Operating System :: OS Independent",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+  "Topic :: System :: Benchmark",
 ]
 dependencies = [
   "Django>=3.2",
