ci: set Django Secret Key for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,6 @@ jobs:
       - name: Run tests
         env:
           PYTHONPATH: examples
+          DJANGO_SECRET_KEY: "test-secret-key"
         run: |
           pytest
